--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -9,111 +9,172 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
-  img{
+
+  img {
     max-width: 640px;
   }
 }
 
-.ctaText{
-    max-width: 600px;
+.ctaText {
+  max-width: 600px;
 
-    h1{
-        font-size: 3.5rem;
-        line-height: 4.5rem;
-        font-size: 900;
-        margin-top: 2.5rem;
-        color:var(--white);
-    }
+  h1 {
+    font-size: 3.5rem;
+    line-height: 4.5rem;
+    font-size: 900;
+    margin-top: 2.5rem;
+    color: var(--white);
+  }
 
-    span{
-        font-size:1rem;
-        line-height: 2.25rem;
-        color:var(--white);
-    }
+  span {
+    font-size: 1rem;
+    line-height: 2.25rem;
+    color: var(--white);
+  }
 
-    button{
-        background-color: var(--blue-900);
-        border:0;
-        padding:1rem 1.8rem;
-        margin-top: 2.5rem;
-        border-radius:7px;
-        color:var(--white);
-        font-weight: bold;
-    }
+  button {
+    background-color: var(--blue-900);
+    border: 0;
+    padding: 1rem 1.8rem;
+    margin-top: 2.5rem;
+    border-radius: 7px;
+    color: var(--white);
+    font-weight: bold;
+  }
 }
 
-.divisor{
-  width:100%;
-  height:1px;
+.divisor {
+  width: 100%;
+  height: 1px;
   bottom: 0;
   border-color: var(--gray-200);
 }
 
-.sectionContent{
-  margin:5.5rem;
+.sectionContent {
+  margin: 5.5rem;
   max-width: 1120px;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  section{
+  section {
     max-width: 670px;
   }
-  img{
+  img {
     max-width: 550px;
   }
 
-  h2{
+  h2 {
     font-size: 2.2rem;
     line-height: 4.5rem;
     font-weight: 900;
     margin-top: 2.2rem;
-    color:var(--white)
+    color: var(--white);
   }
 
-  span{
+  span {
     font-size: 1rem;
     line-height: 2.25rem;
-    color:var(--white);
-    
+    color: var(--white);
   }
 }
-.nextLevelContent{
+.nextLevelContent {
   max-width: 1120px;
-  margin:6rem auto;
+  margin: 6rem auto;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: column;
 
-  h2{
-    font-size:2.8rem;
+  h2 {
+    font-size: 2.8rem;
     line-height: 4.5rem;
     font-weight: 900;
-    color:var(--white);
-    span{
-      font-size:2.8rem;
+    color: var(--white);
+    span {
+      font-size: 2.8rem;
       line-height: 4.5rem;
       font-weight: 900;
-      color:var(--blue-900);
+      color: var(--blue-900);
     }
-  
   }
-  span{
+  span {
     font-size: 1rem;
     line-height: 2.25rem;
-    color:var(--white);
+    color: var(--white);
   }
 
-    button{
-     background-color: var(--blue-900); 
-     border: 0;
-     padding:1rem 2.8rem;
-     margin-top: 2.5rem;
-     border-radius: 6px;
-     color:var(--white);
-     font-weight: bold;
+  button {
+    background-color: var(--blue-900);
+    border: 0;
+    padding: 1rem 2.8rem;
+    margin-top: 2.5rem;
+    border-radius: 6px;
+    color: var(--white);
+    font-weight: bold;
+  }
+}
+
+@media (max-width: 1090px) {
+  .container {
+    .containerHeader {
+      padding: 0 2rem;
+
+      button {
+        display: block;
+      }
+    }
+    img {
+      max-width: 600px;
+    }
+    div h1 {
+      font-size: 3rem;
+    }
+    div h2 {
+      font-size: 2.3rem;
+      span {
+        font-size: 2.3rem;
+      }
     }
 
+    .sectionContent,
+    .nextLevelContent {
+      padding: 0 2rem;
+    }
+  }
 }
+
+@media (max-width: 950px) {
+  .container {
+    .containerHeader {
+      flex-direction: column;
+      button{
+        width:100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+    }
+    img{
+      max-width: 500px;
+    }
+   div h1{
+      font-size: 3rem;
+    }
+    h2{
+      font-size: 1rem;
+    }
+    .sectionContent{
+
+      flex-direction: column;
+      img{
+        margin-top: 2rem;
+        max-width: 400px;
+      }
+    }
+
+   
+    }
+  }
+
