teste para verificar login git hub

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,9 +12,9 @@
   --gray-700:#15171b; //background do header
   --gray-900:#111113; //background body
 
-  --blue-900:#1fa4e5; //cta buttons
+  --blue-900:#1fa4e5; 
   --yellow-500:#ffbe16;
-
+//muito legal
 }
 
 @media (max-width:1080px){
